Use getFirst where applicable